# rf2t-micro

./: .gitignore  README.md  pyproject.toml
.github/workflows/: python-package.yml
rf2t_micro/: Attention_module.py  DistancePredictor.py  Embeddings.py  InitStrGenerator.py  Transformer.py  TrunkModel.py  cli.py  parsers.py  performer_pytorch.py  predict_msa.py  resnet.py  weights.py
